# stream-translator-gpt-deepseek

./: .gitignore  README.md  README_CN.md  README_PyPI.md  audio_getter.py  audio_slicer.py  audio_transcriber.py  common.py  filters.py  gpt_translation.py  gpt_translator.py  llm_translator.py  openai_api.py  pyproject.toml  requirements.txt  result_exporter.py  stream_translator.ipynb  translator.py  vad.py
.github/workflows/: auto-yapf.yml
faster_whisper/: feature_extractor.py  transcribe.py
stream_translator_gpt/: __main__.py  audio_getter.py  audio_slicer.py  audio_transcriber.py  common.py  filters.py  llm_translator.py  result_exporter.py  translator.py
